# MLOPS_Python_EEG

./: .pre-commit-config.yaml  example_data.csv  pyproject.toml
src/: run_pipeline.py
src/Encoder/: Position_encoding.py  Time_vector.py
src/model/: Transformer.py  data_cleaning.py  evaluation.py  model.py  model_dev.py
src/pipelines/: training_pipeline.py
src/save_history/: LSTM_history.csv  Transformer_history.csv
src/save_model/: LSTM_model.h5
src/steps/: clean_data.py
src/test_data/: Test_data.py
